bug fixs
